GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/Club_Eurostar_Returned_Cards__c.object-meta.xml
<CustomObject>
    <label>Club Eurostar Returned Card</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Returned Card Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Club Eurostar Returned Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>