GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Date_In__c.field-meta.xml
<CustomField>
    <fullName>Date_In__c</fullName>
    <label>Date In</label>
    <type>Date</type>
</CustomField>