GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Date_of_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Disposal__c</fullName>
    <label>Date of Disposal</label>
    <type>Date</type>
</CustomField>