GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Date_Resent__c.field-meta.xml
<CustomField>
    <fullName>Date_Resent__c</fullName>
    <label>Date Resent</label>
    <type>Date</type>
</CustomField>