GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Club_Eurostar_Returned_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>