GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Phone_Call_Made_Not_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Phone_Call_Made_Not_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Call Made, Not Resolved</label>
    <type>Checkbox</type>
</CustomField>