GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member Contacted</fullName>
                <default>true</default>
                <label>Member Contacted</label>
            </value>
            <value>
                <fullName>Card Resent</fullName>
            </value>
            <value>
                <fullName>Card Disposed Of</fullName>
            </value>
            <value>
                <fullName>Phone Call Needed</fullName>
                <isActive>false</isActive>
                <label>Phone Call Needed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>