GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/fields/Type_of_Card__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Card__c</fullName>
    <label>Type of Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carte Blanche</fullName>
            </value>
            <value>
                <fullName>Carte Blanche Elite</fullName>
            </value>
            <value>
                <fullName>Carte Classique</fullName>
                <isActive>false</isActive>
                <label>Carte Classique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>