GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/validationRules/Disposed_Of_Must_have_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposed_Of_Must_have_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;Card Disposed Of&quot;)
&amp;&amp;
ISBLANK( Date_of_Disposal__c )</errorConditionFormula>
    <errorDisplayField>Date_of_Disposal__c</errorDisplayField>
    <errorMessage>Please enter the date that the card was disposed of</errorMessage>
</ValidationRule>