GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/validationRules/Resent_Must_have_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Resent_Must_have_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;Card Resent&quot;)
&amp;&amp;
ISBLANK( Date_Resent__c )</errorConditionFormula>
    <errorDisplayField>Date_Resent__c</errorDisplayField>
    <errorMessage>Please enter the date that the card was resent</errorMessage>
</ValidationRule>