GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Language_Formula__c</columns>
    <columns>Email_Tracker__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>