GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/listViews/Cards_To_Be_Disposed_Of.listView-meta.xml
<ListView>
    <fullName>Cards_To_Be_Disposed_Of</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Member Contacted,Phone Call Needed</value>
    </filters>
    <filters>
        <field>Email_Tracker__c</field>
        <operation>equals</operation>
        <value>Disposal Email Sent</value>
    </filters>
    <label>Cards To Be Disposed Of</label>
    <language>en_US</language>
</ListView>