GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/listViews/Elite_Members.listView-meta.xml
<ListView>
    <fullName>Elite_Members</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Language_Formula__c</columns>
    <columns>Email_Tracker__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Card__c</field>
        <operation>equals</operation>
        <value>Carte Blanche Elite</value>
    </filters>
    <label>Elite Members</label>
    <language>en_US</language>
</ListView>