GearsetPOC/force-app/main/default/objects/Club_Eurostar_Returned_Cards__c/listViews/Phone_Calls_Needed.listView-meta.xml
<ListView>
    <fullName>Phone_Calls_Needed</fullName>
    <columns>NAME</columns>
    <columns>Member_Name__c</columns>
    <columns>Phone_Call_Made_Not_Resolved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Phone Call Needed</value>
    </filters>
    <filters>
        <field>Phone_Call_Made_Not_Resolved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Phone Calls Needed</label>
    <language>en_US</language>
</ListView>